OO-5209: Course elements can be excluded per user in learning path courses